--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,26 +8,31 @@ on:
     branches:
       - main
 
-permissions:
-  contents: read
-
 jobs:
   build:
+    name: Build distribution 📦
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.11", "3.12"]
-  
+
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: "3.x"
 
-    - name: Build and install with setup.py
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install setuptools
-        python -m pip install -r requirements.txt
-        python setup.py install
+    - name: Install pypa/build
+      run: >
+        python3 -m
+        pip install
+        build
+        --user
+
+    - name: Build a binary wheel and a source tarball
+      run: python3 -m build
+
+    - name: Store the distribution packages
+      if: github.event_name == 'push'
+      uses: actions/upload-artifact@v3
+      with:
+        name: python-package-distributions
+        path: dist/
