--- a/.pylintrc
+++ b/.pylintrc
@@ -1,5 +1,5 @@
 [MESSAGES CONTROL]
-disable=R0903, C2801, R0901, E1123, W0603
+disable=R0903, C2801, R0901, E1123, W0603, C0301, R0913
 
 [REPORTS]
 reports=no
